# University-Studing

./: .gitignore  README.md
Term 1/Java/java-solutions/: DynamicArray.java  IntList.java  MyScanner.java  Reverse.java  ReverseSum.java  Sum.java  SumLongOctal.java  WordStat.java  WordStatLengthPrefix.java  Wspp.java  WsppPosition.java
Term 1/Java/java-solutions/expression/: Add.java  ArithmeticalShift.java  BinaryOperation.java  Const.java  Divide.java  Main.java  Multiply.java  ShiftL.java  ShiftR.java  Subtract.java  SuperExpression.java  UnaryOperation.java  UnateMinus.java  Variable.java
Term 1/Java/java-solutions/game/: Board.java  CheaterPlayer.java  HumanPlayer.java  MNKBoard.java  MNKBoardRhombus.java  MNKGame.java  Main.java  Parameters.java  Player.java  Position.java  (+4 more)
Term 1/Java/vedernikov/: README.md
Term 1/Python/GoldRush/: .gitlab-ci.yml
Term 1/Python/GoldRush/07.2.ModulesPackagesImport/tasks/steganography_tool/: pyproject.toml
Term 1/Python/GoldRush/07.2.ModulesPackagesImport/tasks/steganography_tool/steganography_tool/: cli.py  decode.py  encode.py
Term 1/Python/Laba_po_AiSD/: Balanced_Team.py  Kolichestvo_inversiy.py  MaxSum.py  Maximal_Sum.py  Med_dla_Mihaila.py  MinimumVOkne.py  Ob'edinenie_posledovatelnostey.py  Ochered'SMinimumom.py  Poezdka_na_olimpiadu.py  PrefSum.py  Prostaya_ochered'.py  Prostoi_stek.py  Stilnaya_odezhda.py  Stilnayz_odezhda2.py  VelikoePereselenie.py  sortirovka.py
Term 2/C++ labs/1HW/: global_sum.c  simple_calc.c  sum.c  time.c
Term 2/C++ labs/2HW/: longest_word.c  postfix_write.c  simple_stack.c  sort.c
(+158 files in other folders)
