[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steganography_tool"
version = "0.0.1"
description = "A tool to hide messages in images"
readme = "README.md"
requires-python = ">=3.9"

# ВАЖНО: Формат авторов для генерации поля Author-email
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "Pillow",
    "numpy",
    "click",
]

[project.scripts]
steganography-tool = "steganography_tool.cli:cli"